--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  width: 350px;
+  height: 150px;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
+
+#root{
+  width: 100%;
+  height: 100%;
+  border: 1px solid #707070;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
