--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  padding: 8px 14px;
+  padding: 12px 14px;
   background: white;
   color : #333333;
   font-size: 16px;
@@ -11,7 +11,8 @@
   line-height: 25px;
 
   .header{
-    height: 24px;
+    height: 22px;
+    margin-bottom: 6px;
   }
 
   .inputText{
