--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,22 +1,48 @@
-.header{
+.header {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: #595959;
+  padding-right: 4px;
+  gap: 12px;
 
-  .iconBox{
-    width: 24px;
-    height: 24px;
+  .iconBox {
+    width: 22px;
+    height: 22px;
+    flex: 1;
 
-    img{
-      width: 100%;
-      height: 100%;
+    img {
+      width: 22px;
+      height: 22px;
     }
   }
 
-  .closeBox{
+  .voiceToggle {
+    cursor: pointer;
+
+    img {
+      width: 22px;
+      height: 22px;
+    }
+  }
+
+  .translateToggle {
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    img {
+      width: 17px;
+      height: 17px;
+    }
+  }
+
+  .closeBox {
     font-size: 20px;
     cursor: pointer;
   }
