--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,15 +19,6 @@
     }
   }
 
-  .voiceToggle {
-    cursor: pointer;
-
-    img {
-      width: 22px;
-      height: 22px;
-    }
-  }
-
   .translateToggle {
     width: 22px;
     height: 22px;
@@ -43,7 +34,16 @@
   }
 
   .closeBox {
-    font-size: 20px;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+
+    img {
+      width: 14px;
+      height: 14px;
+    }
   }
 }
